[gd_scene load_steps=13 format=3 uid="uid://cmeepixmlhdoy"]

[ext_resource type="Theme" uid="uid://ciqny1m6cdda7" path="res://scenes/ui/game_ui_theme.tres" id="1_e2vrk"]
[ext_resource type="Script" uid="uid://e6oum0mhxs6l" path="res://scenes/ui/game_screen.gd" id="1_gusqm"]
[ext_resource type="Texture2D" uid="uid://dl6hngnfm4qpw" path="res://assets/graveyard.jpeg" id="3_gusqm"]
[ext_resource type="Shader" uid="uid://254serxgsgsk" path="res://scenes/ui/face_warp.gdshader" id="4_0kkfd"]
[ext_resource type="Texture2D" uid="uid://cn080dfqsuq6o" path="res://assets/game/characters/zombie/zombie_face.png" id="4_gkbp4"]
[ext_resource type="AudioStream" uid="uid://mq1tcmmdmro2" path="res://assets/audio/music.mp3" id="6_nwa5a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gkbp4"]
texture = ExtResource("3_gusqm")
modulate_color = Color(0.749599, 0.7496, 0.749599, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e2vrk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nwa5a"]
shader = ExtResource("4_0kkfd")
shader_parameter/opacity = 1.0
shader_parameter/waveAmplitude = 0.25
shader_parameter/correctVertex = true
shader_parameter/waveFrequency = 10.0
shader_parameter/verticalWave = true
shader_parameter/keepTransparency = true
shader_parameter/useTime = true
shader_parameter/waveSpeed = 1.0
shader_parameter/progress = 0.0
shader_parameter/firstHalf = 0.5
shader_parameter/secondHalf = 0.5
shader_parameter/freezeFirstHalf = false
shader_parameter/freezeSecondHalf = false

[sub_resource type="Animation" id="Animation_nwa5a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BloodOverlay:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1280, 720)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BloodOverlay:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 360)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BloodOverlay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.153272, 0.750274, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BloodOverlay:material:shader_parameter/opacity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_0kkfd"]
resource_name = "blood_splatter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BloodOverlay:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1600, 1000)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BloodOverlay:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 360), Vector2(-150, -250)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BloodOverlay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.508204, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.152941, 0.74902, 0, 0.0392157), Color(0.152941, 0.74902, 0, 0.635294), Color(0.152941, 0.74902, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BloodOverlay:material:shader_parameter/opacity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.50193, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ooiym"]
_data = {
&"RESET": SubResource("Animation_nwa5a"),
&"blood_splatter": SubResource("Animation_0kkfd")
}

[node name="GameScreen" type="CanvasLayer"]
layer = 3
script = ExtResource("1_gusqm")

[node name="MainMenuContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e2vrk")
theme_override_styles/panel = SubResource("StyleBoxTexture_gkbp4")

[node name="PanelContainer" type="PanelContainer" parent="MainMenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ChalkBoardContainer"

[node name="MarginContainer" type="MarginContainer" parent="MainMenuContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="GameTitleLabel" type="Label" parent="MainMenuContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ScoreLabel"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "ZOMBONK"

[node name="FinalScoreLabel" type="Label" parent="MainMenuContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ScoreLabel"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Bonk & Prosper"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PlayAgainButton" type="Button" parent="MainMenuContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PrimaryButton"
text = "Play"

[node name="GameContainer" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_e2vrk")
theme_override_styles/panel = SubResource("StyleBoxEmpty_e2vrk")

[node name="MarginContainer" type="MarginContainer" parent="GameContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameContainer/MarginContainer"]
layout_mode = 2

[node name="HeartsPanelContainer" type="PanelContainer" parent="GameContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 44)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"HeartContainer"

[node name="MarginContainer" type="MarginContainer" parent="GameContainer/MarginContainer/VBoxContainer/HeartsPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HeartsContainer" type="HBoxContainer" parent="GameContainer/MarginContainer/VBoxContainer/HeartsPanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="WarningsPanelContainer" type="PanelContainer" parent="GameContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 44)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"HeartContainer"

[node name="MarginContainer" type="MarginContainer" parent="GameContainer/MarginContainer/VBoxContainer/WarningsPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="WarningsContainer" type="HBoxContainer" parent="GameContainer/MarginContainer/VBoxContainer/WarningsPanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ScoreLabelContainer" type="PanelContainer" parent="GameContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"HeartContainer"

[node name="MarginContainer" type="MarginContainer" parent="GameContainer/MarginContainer/ScoreLabelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="ScoreLabel" type="Label" parent="GameContainer/MarginContainer/ScoreLabelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"ScoreLabel"
text = "Score: 0"

[node name="GameOverContainer" type="PanelContainer" parent="."]
visible = false
self_modulate = Color(0.97459, 0.0752192, 1.92523e-07, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_e2vrk")

[node name="PanelContainer" type="PanelContainer" parent="GameOverContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ChalkBoardContainer"

[node name="MarginContainer" type="MarginContainer" parent="GameOverContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="VBoxContainer2" type="VBoxContainer" parent="GameOverContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="GameOverLabel" type="Label" parent="GameOverContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ScoreLabel"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Game Over"

[node name="FinalScoreLabel" type="Label" parent="GameOverContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ScoreLabel"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PlayAgainButton" type="Button" parent="GameOverContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PrimaryButton"
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="GameOverContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PrimaryButton"
text = "Main Menu"

[node name="BloodOverlay" type="TextureRect" parent="."]
modulate = Color(0.153272, 0.750274, 0, 1)
material = SubResource("ShaderMaterial_nwa5a")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("4_gkbp4")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ooiym")
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nwa5a")
bus = &"Music"

[connection signal="pressed" from="MainMenuContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameOverContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameOverContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
